Table Creation and Header Tags

--- a/cheatsheets/cheatsheetHTMLCSS/index.html
+++ b/cheatsheets/cheatsheetHTMLCSS/index.html
@@ -8,7 +8,44 @@
 
     <body>
       <div>
-        <h1>HTML & CSS Cheat Sheet</h1>
+        <h1 class='title'>HTML & CSS Cheat Sheet</h1>
+        <p class='title'>by Icarus</p>
+      </div>
+      <div>
+        <table class="center">
+          <col style="width:15%">
+          <thead>
+            <tr>
+              <th>HTML Tag</th>
+              <th>Description</th>
+            </tr>
+          </thead>
+          <tr>
+            <td class="HTMLtag">&lt;h1&gt;</td>
+            <td><h1>Header</h1></td>
+          </tr>
+          <tr>
+            <td class="HTMLtag">&lt;h2&gt;</td>
+            <td><h2>Header</h2></td>
+          </tr>
+          <tr>
+            <td class="HTMLtag">&lt;h3&gt;</td>
+            <td><h3>Header</h3></td>
+          </tr>
+          <tr>
+            <td class="HTMLtag">&lt;h4&gt;</td>
+            <td><h4>Header</h4></td>
+          </tr>
+          <tr>
+            <td class="HTMLtag">&lt;p&gt;</td>
+            <td><p>Text</p></td>
+          </tr>
+          <tr>
+            <td class="HTMLtag">&lt;b&gt;</td>
+            <td><b>Bold</b></td>
+          </tr>
+
+        </table>
       </div>
     </body>
 </html>
