--- a/cheatsheets/cheatsheetHTMLCSS/index.html
+++ b/cheatsheets/cheatsheetHTMLCSS/index.html
@@ -21,20 +21,8 @@
             </tr>
           </thead>
           <tr>
-            <td class="HTMLtag">&lt;h1&gt;</td>
-            <td><h1>Header</h1></td>
-          </tr>
-          <tr>
-            <td class="HTMLtag">&lt;h2&gt;</td>
-            <td><h2>Header</h2></td>
-          </tr>
-          <tr>
-            <td class="HTMLtag">&lt;h3&gt;</td>
-            <td><h3>Header</h3></td>
-          </tr>
-          <tr>
-            <td class="HTMLtag">&lt;h4&gt;</td>
-            <td><h4>Header</h4></td>
+            <td class="HTMLtag">&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;</td>
+            <td><h1>Header</h1><h2>Header</h2><h3>Header</h3><h4>Header</h4></td>
           </tr>
           <tr>
             <td class="HTMLtag">&lt;p&gt;</td>
