--- a/HTML:CSS Projects/Website/index.html
+++ b/HTML:CSS Projects/Website/index.html
@@ -46,5 +46,8 @@
         <p>The quick brown fox jumps over the lazy dog</p>
       </div>
     </div>
+    <div class="section">
+      <div class="stylesample"></div>
+    </div>
   </body>
 </html>
